Changelog
=========


1.2.9 (unreleased)
------------------

- Nothing changed yet.


1.2.8 (2014-09-23)
------------------

- BugFix: Do not journalize in workflow history if the item has no workflow.
  [misch]

1.2.7 (2014-02-10)
------------------

- Update French translations.
  [jone]

- Move plone translations from i18n to locales folder.
  [jone]


1.2.6 (2013-05-13)
------------------

- Updated French translations.
  [tschanzt]


1.2.5 (2012-06-05)
------------------

- Update German translations.
  [jone]


1.2.4 (2012-02-28)
------------------

- Adjust MANIFEST.in: add include for rst files (reamde.rst).
  [phgross]


1.2.3 (2012-02-28)
------------------

- Fixed previous Release.
  [phgross]

1.2.2 (2012-02-27)
------------------

- Added some French translations
  [ttschanz]

- Added default .gitignore
  [lgraf]


1.2.1 (2011-11-17)
------------------

- Changed entry_points target from opengever to plone
  [eschmutz]

- Added integration tests
  [eschmutz]

- Added functional test for events
  [eschmutz]

- Added functional tests for interfaces and adapters
  [eschmutz]

- Added testsetup for jenkins
  [eschmutz]

- Translations updated.
  [phabegger]


1.2 (2010-11-18)
----------------

- Adjust Manifest.in and IGNORE.txt


1.1 (2010-09-13)
----------------

- Translated actions in plone domain
  [jinfanger]

1.0
---

- Final relase

0.5
---

- Created version.txt
  [jone]

- Fixed Bug in AnnotationsJournalizable-Adapter (AttributeError: context)
  [13.10.2009]

- Fixed Bug in AnnotationsJournalizable-Adapter

    - There seemed to be multiple journal list instances
    - Using PersistentList and PersistentDict now

  [jone]


0.4
---

- Added contentrule action for journal entries
  [christian.schneider]


0.3
---

- Moving from teamraum.journal to ftw.journal
  [christian.schneider]


0.2.3
-----

- Fixed bug that prevented journalizer event handler from working
  [christian.schneider]


0.2.2
-----

- Added i18n stuff
  [christian.schneider]
